# NyaManga

./: .gitignore  LICENSE  README.md  app_ui.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
nyamanga/: __init__.py  cli.py  client.py  config.py  embedder.py  pipeline.py
